// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Col /> with added props - 1st set should match snapshot with props 1`] = `
.c0 {
  margin: 0;
  box-sizing: border-box;
  -webkit-flex: 2 3 75%;
  -ms-flex: 2 3 75%;
  flex: 2 3 75%;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 .brckwrx-row {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

<div
  className="brckwrx-col c0"
  order={2}
/>
`;

exports[`<Col /> with default props/settings should match snapshot 1`] = `
.c0 {
  margin: 0;
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c0 .brckwrx-row {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

<div
  className="brckwrx-col c0"
/>
`;
